--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "scraper.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node scraper.js"
   },
   "author": "",
   "license": "ISC",
@@ -12,6 +12,5 @@
     "cheerio": "^1.0.0-rc.2",
     "fs": "0.0.1-security",
     "request": "^2.87.0"
-  },
-  "scripts": { "start": "node scraper.js"}
+  }
 }
