--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "cheerio": "^1.0.0-rc.2",
+    "csv-file-creator": "^1.0.8",
     "fs": "0.0.1-security",
     "request": "^2.87.0"
   }
