--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "cheerio": "^1.0.0-rc.2",
     "csv-file-creator": "^1.0.8",
     "fs": "0.0.1-security",
+    "glob": "^7.1.2",
     "request": "^2.87.0"
   }
 }
